--- a/css/smash4/style.css
+++ b/css/smash4/style.css
@@ -457,9 +457,10 @@ input[type=button] {
     float:left;
 }
 
-.percent-div{
-    float:right;
+.percent-div {
+    float: right;
     margin-left: 3px;
+    margin-top: 11px;
 }
 
 /*.data-labels{
@@ -673,6 +674,17 @@ button {
     background: rgba(5, 117, 65, 0.75)
 }
 
+.character-image-cont {
+    padding: 8px 4px;
+    display: inline-block;
+}
+
+.character-image {
+    width: 35px;
+    height: auto;
+    transform: rotate(45deg);
+}
+
 /* --------Screen sizes-------- */
 
 /*Remove floats inside stuff on smaller screens*/
@@ -685,6 +697,7 @@ button {
         clear: both;
         float: right;
         margin-left: 0;
+        margin-top: -9px;
     }
 
     #results-table {
@@ -744,6 +757,7 @@ button {
         display: block;
         float: right;
         margin-left: 3px;
+        margin-top: 9px;
     }
 
     .luma {
@@ -757,7 +771,7 @@ button {
     }
 
     #results {
-        margin-top:20px;
+        margin-top: 20px;
         float: none;
         width: 100%;
     }
@@ -787,7 +801,7 @@ button {
         font-size: 23px;
     }
 
-    #themeSelect, #appSelect{
+    #themeSelect, #appSelect {
         font-size: 13px;
     }
 
@@ -812,7 +826,7 @@ button {
     }
 }
 
-@media screen and (max-width: 635px) {
+@media screen and (max-width: 670px) {
     .pos-left {
         float: none;
     }
@@ -857,8 +871,8 @@ button {
         font-size: 20px;
     }
 
-    #main-params{
-        float:none;
+    #main-params {
+        float: none;
         margin-left: 10px;
         width: 100%;
     }
