--- a/css/style.css
+++ b/css/style.css
@@ -461,9 +461,10 @@ input[type=button] {
     float:left;
 }
 
-.percent-div{
-    float:right;
+.percent-div {
+    float: right;
     margin-left: 3px;
+    margin-top: 11px;
 }
 
 /*.data-labels{
@@ -677,6 +678,17 @@ button {
     background: rgba(34, 34, 34, 0.95);
 }
 
+.character-image-cont {
+    padding: 8px 4px;
+    display: inline-block;
+}
+
+.character-image {
+    width: 35px;
+    height: auto;
+    transform: rotate(45deg);
+}
+
 /* --------Screen sizes-------- */
 
 /*Remove floats inside stuff on smaller screens*/
@@ -689,6 +701,7 @@ button {
         clear: both;
         float: right;
         margin-left: 0;
+        margin-top: -9px;
     }
 
     #results-table {
@@ -748,6 +761,7 @@ button {
         display: block;
         float: right;
         margin-left: 3px;
+        margin-top: 9px;
     }
 
     .luma {
@@ -816,7 +830,7 @@ button {
     }
 }
 
-@media screen and (max-width: 635px) {
+@media screen and (max-width: 670px) {
     .pos-left {
         float: none;
     }
