--- a/css/dark/style.css
+++ b/css/dark/style.css
@@ -697,6 +697,14 @@ button {
     transform: rotate(45deg);
 }
 
+.attacker-image {
+    background: rgb(255, 51, 51);
+}
+
+.target-image {
+    background: rgb(66, 112, 255);
+}
+
 /* --------Screen sizes-------- */
 
 /*Remove floats inside stuff on smaller screens*/
