--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ table, td, tr {
 }
 
 .value-even {
-    background: #D9D9D9;
+    background: rgb(215, 215, 215);
 }
 
 .pos-left {
@@ -471,8 +471,16 @@ input[type=button] {
     background: white;
 }
 
-/* --------Custom inputs-------- */
+/*.result-table thead{
+    border-bottom: 1px solid black;
+}*/
 
+.result-table thead,
+.result-table tbody tr td:first-child{
+    font-weight: 600;
+}
+
+/* --------Custom inputs-------- */
 input[type="checkbox"] {
     width: 20px;
     height: 20px;
@@ -865,6 +873,10 @@ select.character-select {
 
     .character-select-container{
         width: 220px;
+    }
+
+    .shield-select {
+        clear: both;
     }
 }
 
