--- a/css/style.css
+++ b/css/style.css
@@ -299,8 +299,7 @@ input[type=button] {
     float: right;
 }
 
-.hitframe-faf{
-    clear:left;
+.staleness{
     margin-top:10px;
 }
 
@@ -398,6 +397,7 @@ input[type=button] {
 #results-table {
     color: black;
     margin-left: 10%;
+    font-size: 17px;
 }
 
 #extra-table {
@@ -458,6 +458,7 @@ input[type=button] {
 .queue-td{
     padding: 0px 2px 2px 2px;
     text-align:center;
+    border-collapse:collapse;
 }
 
 .plot{
@@ -530,6 +531,52 @@ input[type="checkbox"] {
             -ms-transform: translate(-50%,-50%);
             transform: translate(-50%,-50%);
         }
+
+    input[type="checkbox"].queue-cb {
+        width: 24px;
+        height: 24px;
+        top: 5px;
+        font: 16px/22px 'pt-sans', 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
+        font-weight: 600;
+        background: #dedede linear-gradient(to top, #dedede, #ffffff);
+        outline: none;
+        border: 1px solid #a7a7a7;
+        position: relative;
+        -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        -webkit-font-smoothing: antialiased;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 0px;
+        -webkit-transition: all 0.15s;
+        -moz-transition: all 0.15s;
+        -ms-transition: all 0.15s;
+        -o-transition: all 0.15s;
+        transition: all 0.15s;
+    }
+
+    input[type="checkbox"].queue-cb::after {
+        content: attr(data-value);
+        color: #3b3b3b;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+    }
+    input[type="checkbox"].queue-cb:checked {
+        background: rgba(35, 35, 35, 0.90);
+    }
+    input[type="checkbox"].queue-cb:checked:after {
+        content: attr(data-value);
+        color: white;
+    }
 
 input[type="radio"] {
     width: 20px;
@@ -954,6 +1001,10 @@ select.character-select {
         font-size: 18px;
     }
 
+    .result-table {
+        font-size: 18px;
+    }
+
     #filter {
         font-size: 18px;
     }
@@ -1004,6 +1055,10 @@ select.character-select {
         font-size: 20px;
     }
 
+    .result-table {
+        font-size: 20px;
+    }
+
     #filter {
         font-size: 20px;
     }
@@ -1034,6 +1089,13 @@ select.character-select {
 
     select.character-select{
         width: 240px;
+    }
+
+    input[type="checkbox"].queue-cb {
+        width: 40px;
+        height: 40px;
+        font: 20px/26px 'pt-sans', 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
+        font-weight: 600;
     }
 }
 
