--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,9 @@ input[type=button] {
     width: 99%;
     padding: 5px;
     margin-bottom: 5px;
+    border-bottom-right-radius: 25px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 .header-group-text {
@@ -387,6 +390,9 @@ input[type=button] {
     width: 99%;
     padding: 5px;
     float: right;
+    border-bottom-left-radius: 25px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 .group-res {
@@ -643,6 +649,7 @@ button {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
+    border-bottom-right-radius: 12px;
     margin-bottom:5px;
 }
 
@@ -720,8 +727,8 @@ button {
 /*---Inputs---*/
 input, select {
     border-radius: 4px;
-    border-bottom-right-radius: 12px;
-    border-top-left-radius: 0px;
+    /*border-bottom-right-radius: 12px;
+    border-top-left-radius: 0px;*/
     padding: 2px 4px;
     margin-bottom: 1px;
     font-size: 14px;
