--- a/css/smash4/style.css
+++ b/css/smash4/style.css
@@ -680,11 +680,11 @@ input[type=number].percent-input + span {
 }
 
 input[type=number].percent-input {
-    width: 2.75em;
+    width: 140px;
     font-family: 'Century Gothic';
     font-style: italic;
     font-weight: 800;
-    font-size: 3.5em;
+    font-size: 45px;
     border: none;
     color: black;
     -webkit-text-fill-color: white;
