--- a/css/style.css
+++ b/css/style.css
@@ -835,11 +835,13 @@ select.character-select {
     color: white;
     background: none;
     position: relative;
-    left: 50px;
+    left: 30px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 12px;
-    width: 170px;
+    width: 190px;
+    text-align: center;
+    text-align-last: center;
 }
 
     select.character-select:focus {
@@ -1092,10 +1094,12 @@ select.character-select {
     .character-select-container {
         width: 290px;
         left: 40px;
+        height: 28px;
     }
 
     select.character-select{
-        width: 240px;
+        width: 260px;
+        top:-7px;
     }
 
     input[type="checkbox"].queue-cb {
