Multi calculations app
Sm4sh Calculator TSV generator updated for Ultimate with KO % and best DI options, still WIP

--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,10 @@ input[type="checkbox"] {
         transition: all 0.15s;
     }
 
+    input[type="checkbox"].disabled {
+        opacity: 0.5;
+    }
+
     input[type="checkbox"].queue-cb::after {
         content: attr(data-value);
         color: #3b3b3b;
