--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,14 @@ input[type=button] {
     font-size: 17px;
 }
 
+#multiresults-table {
+    color: black;
+    margin-left: 1%;
+    font-size: 17px;
+    margin-top: 10px;
+    width: 100%;
+}
+
 #extra-table {
     color: black;
     margin-left: 10%;
@@ -1064,6 +1072,9 @@ select.character-select {
     }
 
     #results-table {
+        margin-left: 0;
+    }
+    #multiresults-table {
         margin-left: 0;
     }
 }
