--- a/css/characters.css
+++ b/css/characters.css
@@ -310,6 +310,10 @@ img.byleth {
     background: #cee0d4;
 }
 
+img.arms-character {
+    background: #cee0d4;
+}
+
 /*----Percent---*/
 div.mario {
     border-top: 5px solid #ff4026
@@ -620,5 +624,9 @@ div.terry {
 }
 
 div.byleth {
+    border-top: 5px solid #cee0d4;
+}
+
+div.arms-character {
     border-top: 5px solid #cee0d4;
 }
