Added Min Min to character selection
Still uses placeholder attribute data

--- a/css/characters.css
+++ b/css/characters.css
@@ -310,8 +310,8 @@ img.byleth {
     background: #cee0d4;
 }
 
-img.arms-character {
-    background: #cee0d4;
+img.min-min {
+    background: #ffff5a;
 }
 
 /*----Percent---*/
@@ -627,6 +627,6 @@ div.byleth {
     border-top: 5px solid #cee0d4;
 }
 
-div.arms-character {
-    border-top: 5px solid #cee0d4;
+div.min-min {
+    border-top: 5px solid #ffff5a;
 }
