--- a/css/characters.css
+++ b/css/characters.css
@@ -318,6 +318,10 @@ img.steve {
     background: #ffff5a;
 }
 
+img.sephiroth {
+    background: #374b4b;
+}
+
 /*----Percent---*/
 div.mario {
     border-top: 5px solid #ff4026
@@ -637,4 +641,8 @@ div.min-min {
 
 div.steve {
     border-top: 5px solid #ffff5a;
+}
+
+div.sephiroth {
+    border-top: 5px solid #374b4b;
 }
