Character links to data viewer and Ultimate Hitboxes
Context menu is displayed when right clicking character image

--- a/css/light/style.css
+++ b/css/light/style.css
@@ -1321,3 +1321,18 @@ select.character-select {
     width:50px;
     height:auto;
 }
+
+.character-data {
+    position: absolute;
+    z-index: 100;
+    background: #fcfcffdd;
+    border: 1px solid black;
+    top: -25px;
+    left: -10px;
+    width: 150px;
+    display: none;
+}
+
+    .character-data a {
+        color: blue;
+    }
